# src/Contexts/LLBE/Enrollments/infrastructure/persistence/MongoEnrollmentRepository.ts
@@ -4,10 +4,10 @@ import { Enrollment } from '../../domain/Enrollment';
 import { EnrollmentRepository } from '../../domain/EnrollmentRepository';
 import { EnrollmentId } from '../../../Shared/domain/Enrollments/EnrollmentId';
 import { JobOpeningId } from '../../../Shared/domain/JobOpenings/JobOpeningId';
+import { StudentId } from '../../../Shared/domain/Students/StudentId';
 
-export class MongoEnrollmentRepository
-  extends MongoRepository<Enrollment>
-  implements EnrollmentRepository {
+export class MongoEnrollmentRepository extends MongoRepository<Enrollment> implements EnrollmentRepository {
+
   public save(enrollment: Enrollment): Promise<void> {
     return this.persist(enrollment.id.value, enrollment);
   }
@@ -20,6 +20,17 @@ export class MongoEnrollmentRepository
     return document
       ? Enrollment.fromPrimitives({ ...document, id: id.value })
       : null;
+  }
+
+  public async searchByStudent(studentId: StudentId): Promise<Enrollment[]> {
+    const collection = await this.collection();
+
+    const resultDocs = await collection
+      .find({ student: studentId.value })
+      .toArray();
+
+    return resultDocs.map((document) => Enrollment.fromPrimitives({ ...document, id: document._id })
+    );
   }
 
   public remove(id: EnrollmentId): Promise<void> {
